# PicovoiceCompare

./: README.md
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
rust-backend/src/routes/: cheetah_route.rs  leopard_route.rs  mod.rs  picovoice_route.rs
